Quick fixes following testing (#80)
* Quick fixes following testing

https://eaflood.atlassian.net/browse/LTFRI-1608

After testing the map the close buttons are not working for R&S and res keys and there are misalignments.

--- a/client/sass/_map-controls.scss
+++ b/client/sass/_map-controls.scss
@@ -297,7 +297,7 @@ $gov-font: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
 
   .esri-zoom {
     margin-bottom: 25px;
-    margin-right: 5px;
+    margin-right: 15px;
 
     @media screen and (max-width: $tablet-width) {
       display: none;
