--- a/client/sass/map-page.scss
+++ b/client/sass/map-page.scss
@@ -81,7 +81,7 @@ body {
   .defra-map-info__container {
     background-color: white;
     display: flex;
-    margin-top: 10px;
+    margin: 10px 10px 0 0;
     float: right;
     clear: right;
     z-index: 11;
@@ -99,6 +99,10 @@ body {
   }
 
   #close-btn {
+    width: 20px;
+    height: 20px;
+  }
+  .close-btn {
     width: 20px;
     height: 20px;
   }
